--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,18 @@ nav{
     font-size: 45px;
     font-weight: 800;
 }
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700px;
+}
+.section-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+
+}
 nav > ul {
     display: flex;
     align-items: center;
@@ -42,12 +54,36 @@ nav a{
 }
 .header{
     background-color: #fff8f3;
+    background-image: url('../images/background.img');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 .banner{
     padding: 30px 30px 30px 150px ;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+.banner-content{
+    max-width: 500px;
 }
 .banner.profile-picture{
     width: 500px;
+}
+.banner-greeting{
+    font-size: 45px;
+     color: #474747;
+     margin-bottom: 0;
+}
+.banner-title{
+    font-size: 45px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+.about{
+    padding:130px;
+    border-radius: 10px;
+    background: #ecdbce;
+    margin: 130px ;
 }
