--- a/styles/style.css
+++ b/styles/style.css
@@ -81,9 +81,24 @@ nav a{
     margin-top: 5px;
     margin-bottom: 20px;
 }
+.main{
+    width: 1140px;
+    margin: auto;
+}
 .about{
     padding:130px;
     border-radius: 10px;
     background: #ecdbce;
     margin: 130px ;
+    }
+    .about-info-container{
+        display: flex;
+        justify-content: space-around;
+    }
+    .about-info{
+        text-align: center;
+    }
+.main{
+    max-width: 1140px;
+    margin: 0 auto;
 }
