--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,8 @@
 /* nav related style */
-.btn-primary{
+.btn-primary {
     border-radius: 5px;
     background: #FD6E0A;
-    border:0;
+    border: 0;
     color: white;
     font-size: 20px;
     font-weight: 700;
@@ -10,95 +10,140 @@
 }
 
 /* share sytles */
-body{
+body {
     font-family: 'Open Sans', sans-serif;
     font-family: 'Lato', sans-serif;
 }
-.text-primary{
-    color:#FD6E0A;
+
+.text-primary {
+    color: #FD6E0A;
 }
-nav{
+
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 200px;
 }
-.nav-title{
+
+.nav-title {
     color: #181818;
     font-size: 45px;
     font-weight: 800;
 }
-.section-title{
+
+.section-title {
     color: #181818;
     text-align: center;
     font-size: 35px;
     font-weight: 700px;
 }
+
 .section-description {
     color: #757575;
     text-align: center;
     font-size: 18px;
 
 }
-nav > ul {
+
+nav>ul {
     display: flex;
     align-items: center;
 }
-nav li{
+
+nav li {
     list-style: none;
     margin-right: 50px;
 }
-nav a{
+
+nav a {
     text-decoration: none;
     color: #474747;
 }
-.header{
+
+.header {
     background-color: #fff8f3;
-    background-image: url('../images/background.img');
+    background-image: url('../images/header_bg.png');
     background-repeat: no-repeat;
     background-position: bottom right;
 }
-.banner{
-    padding: 30px 30px 30px 150px ;
+
+.banner {
+    padding: 30px 30px 30px 100px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.banner-content{
+
+.banner-content {
     max-width: 500px;
 }
-.banner.profile-picture{
+
+.banner.profile-picture {
     width: 500px;
 }
-.banner-greeting{
+
+.banner-greeting {
     font-size: 45px;
-     color: #474747;
-     margin-bottom: 0;
+    color: #474747;
+    margin-bottom: 0;
 }
-.banner-title{
+
+.banner-title {
     font-size: 45px;
     font-weight: 700;
     margin-top: 5px;
     margin-bottom: 20px;
 }
-.main{
+
+.main {
     width: 1140px;
     margin: auto;
 }
-.about{
-    padding:130px;
+
+.about {
+    padding: 130px;
     border-radius: 10px;
     background: #ecdbce;
-    margin: 130px ;
-    }
-    .about-info-container{
-        display: flex;
-        justify-content: space-around;
-    }
-    .about-info{
-        text-align: center;
-    }
-.main{
+    margin: 100px;
+}
+
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info {
+    text-align: center;
+}
+.skills-container{
+    display: flex;
+    text-align: center;
+}
+.display-description{
+    padding: 70px;
+    gap: 24px;
+}
+.skill{
+    padding: 30px 0px 10px 0px;
+    border-radius: 15px;
+    background: #e8e4e0;
+    box-shadow: 0px 0px 30px 0px rgba(207, 94, 94, 0.06);
+
+}
+
+.resume-column-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}  
+
+#what-i-do-description{
+    padding: 30px 30px 10px 15px;
+    text-align: center;
+    margin: 0px 0px 20px 20px;
+}
+.main {
     max-width: 1140px;
     margin: 0 auto;
 }
