--- a/styles/style.css
+++ b/styles/style.css
@@ -147,3 +147,26 @@ nav a {
     max-width: 1140px;
     margin: 0 auto;
 }
+.resume-column-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}.resume-container{
+    display: flex;
+    gap: 50px;
+}
+.resume-item-title {
+    
+    font-size: 25px;
+    font-weight: 700;
+}
+.resume-item-description ,.resume-item-institue {
+    color: #757575;
+}
+.download-cv{
+    text-align: center;
+}
+.footer{
+    display: flex;
+    background-color: #e8e4e0;
+}
